--- a/block-BHaaba/index.html
+++ b/block-BHaaba/index.html
@@ -6,3 +6,67 @@
 
 3. Inside the main content crate three columns. In each column take one image and a paragraph below the image.
 4. Using float is necessary. -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>BrandName</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="patagonia1">
+          <h1>PATAGONIA</h1>
+        </div>
+        <div class="patagonia2">
+          <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="blog">
+          <img src="C:\Users\sreeee\Downloads\pic1.png" alt="bulb" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            itaque error hic consequuntur harum consequatur quam molestias
+            numquam natus eaque voluptatum veniam dignissimos placeat incidunt
+            fugit maxime vero, praesentium magnam. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Iste, iure doloribus. Fugiat a
+            expedita, aliquid rem libero obcaecati consequuntur nisi?
+          </p>
+        </div>
+        <div class="blog">
+          <img src="C:\Users\sreeee\Downloads\pic02.png" alt="keyboard" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            itaque error hic consequuntur harum consequatur quam molestias
+            numquam natus eaque voluptatum veniam dignissimos placeat incidunt
+            fugit maxime vero, praesentium magnam. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Quae, esse.
+          </p>
+        </div>
+        <div class="blog">
+          <img src="C:\Users\sreeee\Downloads\pic03.png" alt="mobile" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            itaque error hic consequuntur harum consequatur quam molestias
+            numquam natus eaque voluptatum veniam dignissimos placeat incidunt
+            fugit maxime vero, praesentium magnam.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+        <h1>Footer</h1>
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+    </footer>
+  </body>
+  </html>
