--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -13,55 +13,38 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <h1>Extracts from "Our Cats, by Harrison Weir"</h1>
         </header>
         <main>
-            <section class="section">
-                <div>
-                <article>
-                <ul>
-                    <li>Introductory</li>
-                    <li>The First Cat Show</li>
-                    <li>Habits</li>
-                    <li>Trained Cats</li>
-                    <li>usefulness of cats</li>
-                </ul>
-                </article>
-                
-                <article class="container">
-                    <h2>Usefullness of Cats</h2>
+            <div class="container clearfix">
+                <aside class="cat1">
+                    <p>Introductory</p>
+                    <p>The First Cat Show</p>
+                    <p>Habits</p>
+                    <p>Trained cats</p>
+                    <p>Usefullness of Cats</p>
+                </aside>
+                <article class="article cat1">
+                    <h2>Usefullness Of Cats</h2>
                     <img src="C:\Users\sreeee\Downloads\cat.jpeg" alt="cat">
+                    <p>In our urban and suburban houses what should we do without cats? In our sitting or bedrooms, our libraries, in our kitchens and storerooms, our farms, barns, and rickyards, in our docks, our granaries, our ships, and our wharves, in our corn markets, meat markets, and other places too numerous to mention, how useful they are! In our ships, however, the rats oft set them at defiance; still they are of great service. </p>
                     <p>
-                        In our urban and suburban houses what should we do without cats?
-                        In our sitting or bedrooms, our libraries, in our kitchens and
-                        storerooms, our farms, barns, and rickyards, in our docks, our
-                        granaries, our ships, and our wharves, in our corn markets, meat
-                        markets, and other places too numerous to mention, how useful they
-                        are! In our ships, however, the rats oft set them at defiance;
-                        still they are of great service.
+                        How wonderfully patient is the cat when watching for rats or mice, awaiting their egress from their place of refuge or that which is their home! How well Shakespeare in Pericles, Act iii., describes this keen attention of the cat to its natural pursuit!
                     </p>
-                      <p>
-                        How wonderfully patient is the cat when watching for rats or mice,
-                        awaiting their egress from their place of refuge or that which is
-                        their home! How well Shakespeare in Pericles, Act iii., describes
-                        this keen attention of the cat to its natural pursuit!
-                      </p>
-                      <p class="para">
-                        The cat, with eyne of burning coal, Now crouches from (before) the mouse's hole.
-                      </p>
-                      <p>
-                        A slight rustle, and the fugitive comes forth; a quick, sharp, resolute motion, and the cat has proved its usefulness. Let any one have a plague of rats and mice, as I once had, and let them be delivered therefrom by cats, as I was, and they will have a lasting and kind regard for them.
-                      </p>
-                        
-                     <p>
-                            Let anyone have a plague of rats and mice, as I once had, and let
-                            them be delivered there from by cats, as I was, and they will have
-                            a lasting and kind regard for them.
-                      </p>
+                    <p class="article2">The cat, with eyne of burning coal, Now crouches from (before) the mouse's hole.
+
+                    </p>
+                    <p>
+                       A slight rustle, and the fugitive comes forth; a quick, sharp, resolute motion, and the cat has proved its usefulness. Let any one have a plague of rats and mice, as I once had, and let them be delivered therefrom by cats, as I was, and they will have a lasting and kind regard for them
+                    </p>
                 </article>
-                </div>
-            </section>
+                <aside class="cat1">
+                    <p>
+                        Let anyone have a plague of rats and mice, as I once had, and let them be delivered there from by cats, as I was, and they will have a lasting and kind regard for them.
+                    </p>
+                </aside>
+            </div>
         </main>
-    </body>
+        </body>
 </html>
