--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -13,3 +13,67 @@
 6. After the gallery section footer will come.
 
 7. Take a circular button at the right bottom corner of the page and keep its position fixed. The button should always take to the top of the page once clicked. -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Assignment 3</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header class="header clearfix">
+        <div class="logo">
+            <h1>logo</h1>
+        </div>
+        <nav class="links">
+            <a href="#">Home</a>
+            <a href="contact">Contact</a>
+            <a href="services">Services</a>
+        </nav>
+        </header>
+        <main>
+            <article>
+                <div class="container clearfix">
+                <div class="city city1-1">
+                <h2>Hyderabad City</h2>
+                <p>
+                    Hyderabad is the capital of southern India's Telangana state.
+                    A major center for the technology industry, it's home to many upscale restaurants
+                    and shops. Its historic sites include Golconda Fort, a former diamond-trading center 
+                    that was once the Qutb Shahi dynastic capital. The Charminar, a 16th-century mosque 
+                    whose 4 arches support towering minarets, is an old city landmark near the 
+                    long-standing Laad Bazaar.
+
+                </p>
+                </div>
+                <aside class="city city1-2">
+                    <img src="C:\Users\sreeee\Downloads\hydpic4.jpg" alt="image">
+                </aside>
+                </div>
+            </article>
+            <section>
+                <div class="picture1">
+                    <img src="C:\Users\sreeee\Downloads\hydpic1.jpg" alt="image1">
+                    <img src="C:\Users\sreeee\Downloads\hydpic2.jpg" alt="image2">
+                    <img src="C:\Users\sreeee\Downloads\hydpic3.jpg" alt="image3">
+                </div>
+                <div class="picture2">
+                    <img src="C:\Users\sreeee\Downloads\hydpic4.jpg" alt="image4">
+                    <img src="C:\Users\sreeee\Downloads\hydpic5.jpg" alt="image5">
+                    <img src="C:\Users\sreeee\Downloads\hydpic6.jpg" alt="image6">
+                </div>
+            </section>
+        </main>
+        <button class="btn clearfix">
+      <a href="#home"> Top</a>
+    </button>
+        <footer>
+            
+            <nav>
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+            </nav>
+        </footer>
+    </body>
+</html>
