--- a/block-BHaabh/index.html
+++ b/block-BHaabh/index.html
@@ -1,7 +1,117 @@
-<!-- 
-### Create a page according to the layout shown below
-
-![Positioning Content Exercise 2](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/positioning-content/ex-2.png)
-
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper. -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Assignment 3</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container clearfix">
+        <div class="logo">
+          <h3>Theory</h3>
+        </div>
+        <div class="nav-bar">
+          <a href="">Home</a>
+          <a href="">Generic</a>
+          <a href="">Elements</a>
+        </div>
+      </div>
+      <div class="welcome">
+        <h1>Welcome to Theory</h1>
+        <p>A free responsive HTML5 website template by TEMPLATED</p>
+      </div>
+    </header>
+    <main>
+      <section class="container clearfix">
+        <div class="col">
+          <h2>The Man Who Develops Code is known as Developer</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            nam deleniti veritatis quia temporibus, expedita id illo.
+          </p>
+          <a class="more" href="">More</a>
+        </div>
+        <div class="col">
+          <h2>The Man Who Develops Code is known as Developer</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            nam deleniti veritatis quia temporibus, expedita id illo.
+          </p>
+          <a class="more" href="">More</a>
+        </div>
+        <div class="col">
+          <h2>The Man Who Develops Code is known as Developer</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            nam deleniti veritatis quia temporibus, expedita id illo.
+          </p>
+          <a class="more" href="">More</a>
+        </div>
+      </section>
+      <section class="section-1">
+        <h2>Ipsum Feugiat</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+        <div class="gallery clearfix">
+          <div class="picture">
+            <img src="C:\Users\sreeee\Downloads\pic03.jpg" alt="" />
+            <h4>Magna</h4>
+            <p>John Singh.</p>
+          </div>
+          <div class="picture">
+            <img src="C:\Users\sreeee\Downloads\pic04.jpg" alt="" />
+            <h4>Ipsum</h4>
+            <p>Smitha Sabarval.</p>
+          </div>
+          <div class="picture">
+            <img src="C:\Users\sreeee\Downloads\pic05.jpg" alt="" />
+            <h4>Tempus</h4>
+            <p>Sachin Josh.</p>
+          </div>
+          <div class="picture clearfix">
+            <img src="C:\Users\sreeee\Downloads\pic06.jpg" alt="" />
+            <h4>Dolore</h4>
+            <p>Mera Singh.</p>
+          </div>
+        </div>
+      </section>
+      <section class="section-2 clearfix">
+        <h2>Nunc Dignissim</h2>
+        <p class="section-2-p">The Hardest Article</p>
+        <div class="col-2">
+          <img class="col-2-img" src="C:\Users\sreeee\Downloads\pic01.jpg" alt="" />
+          <h3>The Desert and the pleasent Road</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            nam deleniti veritatis quia temporibus, expedita id illo. Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit. Temporibus,
+            mollitia?
+          </p>
+          <a class="more" href="">More</a>
+        </div>
+        <div class="col-2">
+          <img class="col-2-img" src="C:\Users\sreeee\Downloads\pic02.jpg" alt="" />
+          <h3>The man clicks the photos by a Camera</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            nam deleniti veritatis quia temporibus, expedita id illo. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Exercitationem,
+            quam!
+          </p>
+          <a class="more" href="">More</a>
+        </div>
+      </section>
+      <hr />
+    </main>
+    <footer class="footer">
+      <p>&copy; Untitled Design TEMPLATED images Unsplash</p>
+      <div class="icons">
+        <a href="#">Facebook</i></a>
+        <a href="#">twitter></i></a>
+        <a href="#">Instagram</i></a>
+        <a href="#">YouTube</a>
+      </div>
+    </footer>
+  </body>
+</html>
